kubernetes-ingress/apache-app-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
        - name: apache-app
          image: httpd:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  labels:
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: apache-app
