kubernetes-ingress/hostname-app-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hostname-app
  template:
    metadata:
      labels:
        app: hostname-app
    spec:
      containers:
        - name: hostname-app
          image: k8s.gcr.io/serve_hostname:1.1

---
apiVersion: v1
kind: Service
metadata:
  name: hostname-svc
spec:
  ports:
    - port: 80
      targetPort: 9376
      protocol: TCP
  selector:
    app: hostname-app
