kubernetes-ingress/micro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - tylerlee.dev
      secretName: tylerlee-dev-secret
  ingressClassName: nginx
  rules:
    - host: tylerlee.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hostname-svc
                port:
                  number: 80
